# audio-embeddings

./: .gitignore  README.md  inspect_ckpt.py  pyproject.toml
configs/: train.yaml
configs/callbacks/: default.yaml  wandb_offline.yaml
configs/data/: audioset.yaml
configs/experiment/: cluster_jepa_audioset_baseline.yaml  cluster_jepa_audioset_rope.yaml  local_jepa_audioset_baseline.yaml  local_jepa_audioset_rope.yaml
configs/logger/: wandb.yaml
configs/model/: audio_jepa.yaml
scripts/: check_rope.py  inspect_data.py  inspect_h5.py  inspect_rope.py  inspect_timm.py  verify_cropping.py  verify_resampling.py  verify_scheduler.py  verify_shapes.py  verify_variable_length.py
slurm_scritps/: train_audio_jepa_audioset_h100_4gpu.slurm
src/: train.py
src/callbacks/: visualization_callback.py  wandb_callbacks.py
src/data/: __init__.py  audio_utils.py  audioset_datamodule.py
src/models/: audio_jepa_module.py
src/models/components/: __init__.py  masking.py  patch_embed.py  rope.py  spectrogram.py  vit.py
src/utils/: lr_schedulers.py
tests/: verify_custom_rope.py  verify_data.py  verify_rope.py
